누락된 종속성 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ mediapipe; platform_system == 'Windows'
 mediapipe-rpi4; platform_system == 'Linux'
 tensorflow; platform_system == 'Windows'
 PySide6
+qt-material
